# rust_scraper

./: .gga  .gitignore  .refactor-guardian  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CHANGES.md  Cargo.toml  Cargo.toml.ai_deps  DEVELOPMENT.md  LICENSE  MUTATION_TESTING_BASELINE.md  README.md  REALITY.md  REFACTOR_LOG.md  Resumen_de_Actualizar_corregir_código_Rust.md  STATE.md  TEST-COMPARISON-V1-V2.md  TEST-MASTER-PLAN.md  TEST-REFACTORING-PLAN.md  TEST-RESULTS-FINAL.md  TEST-RESULTS-ROUND2.md  TEST-RESULTS.md  bacon.toml  build.rs  deny.toml  exploration.md  exploration_report.md  justfile  llms.txt  mise.toml  nextest.toml  opencode.json  proposal.md  ratatui_comment.md  rustfmt.toml
.atl/: skill-registry.md
.cargo/: config.toml
.config/: nextest.toml
.github/: AGENT_INSTRUCTIONS.md  context_map.json
.github/workflows/: ci.yml  (+1 more)
.qwen/: AGENTS.md  settings.json.orig
@output/: REPORTE.md
benches/: cosine_similarity.rs  export.rs  html_conversion.rs  link_extraction.rs  readability.rs  sitemap_parsing.rs  url_parsing.rs  waf_detection.rs
doc/: ARCHITECTURE.md  CHANGES.md  CLI.md  CONTRIBUTING.md  README.md
docs/: AI-SEMANTIC-CLEANING.md  ARCHITECTURE.md  AUDITORIA.md  CHANGES.md  CLI.md  CONTRIBUTING.md  ISSUE-1-COMPLETE-REPORT.md  OBSIDIAN.md  RAG-EXPORT.md  REFACTOR_LOG.md  SCRAPER-FISH-FUNCTION.md  TUI.md  USAGE.md  competitor-analysis-tcof.md  issue-78-code-references.md  testing.md  tui-unified-design.md
examples/: mcp_server.rs  mcp_server_stdio.rs
fuzz/: Cargo.toml
mcp-tests/: README.md  run-live-test.sh
output/: export.jsonl  results.json
scripts/: gen_context.fish
specs/: async-reactive-tui.md
src/: config.rs  di.rs  error.rs  export_factory.rs  export_flow.rs  lib.rs  main.rs  markdown.rs  orchestrator.rs  preflight.rs  scraper.rs  url_path.rs  url_validation.rs  user_agent.rs
test_lab/: MAPA_FIDELIDAD_TRACES.md  REPORTE_DANOS_FIDELIDAD_v0.5.0.md
tests/: ai_integration.rs  args_test.rs  checkpoint_store_integration.rs  cli_behavioral_test.rs  cli_binary_test.rs  cli_tests.rs  concurrency_tests.rs  cookie_bridge_integration.rs  crawler_integration.rs  elastic_autotuning_test.rs  elastic_container_integration.rs  elastic_ingestion_e2e.rs  elastic_memory_db_test.rs  exporter_integration_test.rs  file_saver_integration.rs  flag_audit_core_display_test.rs  flag_audit_downloads_test.rs  flag_audit_http_crawler_test.rs  flag_audit_obsidian_test.rs  flag_audit_sitemap_resume_test.rs  headless_tui_fallback.rs  html_injection.rs  http_client_integration.rs  integration.rs  integration_engine_tests.rs  integration_test.rs  integration_wikilinks.rs  mcp_behavioral_test.rs  mcp_lifecycle_test.rs  mcp_live_test.rs  mcp_proptest.rs  progress_tui_integration.rs  property_tests.rs  rate_limiting_integration.rs  resource_downloader_integration.rs  resume_mode_tests.rs  scraper_service_test.rs  security_integration.rs  session_pool_integration.rs  sitemap_behavioral.rs  (+9 more)
(+462 files in other folders)
